Версия java понижена до 17